--- a/src/classes/PokerHandService.cls
+++ b/src/classes/PokerHandService.cls
@@ -32,5 +32,27 @@ public class PokerHandService {
 		return hand;
 	}
 	
+	/**
+	* @author: John Schultz
+	* @date: 2017-07-04
+	* @description: Method for re-sorting the display order of the poker hands (user stories).
+	* @param: idToPositionMap - Map<String, Decimal>. Hand record id : position.
+	* @return: List<Poker_Hand__c>
+	*/
+	public static List<Poker_Hand__c> sortHands(Map<String, Decimal> idToPositionMap) {
+		List<Poker_Hand__c> hands = new List<Poker_Hand__c>();
+		
+		for (String handId : idToPositionMap.keySet()) {
+			Poker_Hand__c h = new Poker_Hand__c();
+			h.Id = handId;
+			h.Position__c = idToPositionMap.get(handId);
+			
+			hands.add(h);
+		}
+		
+		update hands;
+		return hands;
+	}
+	
 	
 }
